--- a/pages/shows.html
+++ b/pages/shows.html
@@ -46,7 +46,7 @@
   <iframe 
           width="100%" 
           height="225px"         
-          src="https://www.youtube.com/embed?listType=playlist&list=PLMC9KNkIncKtPzgY-5rmhvj7fax8fdxoj&index=0" 
+           src="https://www.youtube.com/embed?listType=playlist&list=UUnpSZboK4AIfI7RmV6O6vwQ&index=0" 
           frameborder="0" 
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen="1"
@@ -78,6 +78,7 @@
 <script src="../js/jquery-3.3.1.min.js"></script>
 <script src="../js/popper.min.js"></script>
 <script src="../js/bootstrap-4.3.1.js"></script>
-<script src="../js/scripts.js"></script>
+<script src="https://apis.google.com/js/api.js"></script>
+	 <script src="../js/scripts.js"></script>
 </body>
 </html>
