--- a/index.html
+++ b/index.html
@@ -7,21 +7,36 @@
 <title>91BTV</title>
 	 <link href="css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 	<link href="css/Style.css" rel="stylesheet" type="text/css">
+	<script src="https://kit.fontawesome.com/8f8f4ba6dc.js" crossorigin="anonymous"></script>
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="images/site.webmanifest">
 	
 </head>
  <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
 	
-	 <a class="navbar-brand" href="https://91btv.com"> <img src="images/91BTV - 2019 website.svg" alt="Dispute Bills">
+	 <a class="navbar-brand" href="https://91btv.com"> <img src="images/91BTV - 2019 website.svg" alt="91BTV">
         </a>
+	<div class="d-flex flex-row order-2 order-sm-3"> 
+		<ul class="navbar-nav flex-row">
+			<li class="nav-item"> <a class="nav-link px-2" href="https://fb.me/91btv"><i class="fab fa-facebook"></i></a></li>
+	      <li class="nav-item"> <a class="nav-link px-2" href="https://twitter.com/91bathroomtv"><i class="fab fa-twitter"></i></a></li>
+			<li class="nav-item"> <a class="nav-link px-2" href="https://flickr.com/91bathroomtv2"><i class="fab fa-flickr"></i></a></li>
+			<li class="nav-item"> <a class="nav-link px-2" href="https://soundcloud.com/91btv"><i class="fab fa-soundcloud"></i></a></li>
+			<li class="nav-item"> <a class="nav-link px-2" href="https://youtube.com/91btv"><i class="fab fa-youtube"></i></a></li>
+		
+		</ul>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>   
-	
+	</div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
 	      <li class="nav-item"> <a class="nav-link" href="pages/about.html">About Us</a> </li>
+			<li class="nav-item"> <a class="nav-link" href="pages/contact.html">Contact Us </a> </li>
 	      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Media </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Shows</a> <a class="dropdown-item" href="#">Movies</a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="pages/shows.html">Shows</a> <a class="dropdown-item" href="pages/movies.html">Movies</a><a class="dropdown-item" href="music.html">Music</a>
 				
 	          <div class="dropdown-divider"></div>
 	          <a class="dropdown-item" href="http://youtube.com/91BTV">Youtube Channel</a> </div>
@@ -74,15 +89,15 @@
 	      
 
 <section>
-  <p>Hello visitors, this is the new and improved 91BTV website. 91BTV  strives to entertain people with interative, immersive and entertaining shows and short films. 91BTV produces a wide variety of content ranging from vlogs and interviews to technology and gaming.</p>
-
-
+  <p class="text-center">Hello visitors, this is the new and improved <strong>91BTV</strong> website.</p>
+  <p><strong>91BTV</strong> strives to entertain people with interative, immersive and entertaining shows and short films. We produces a wide variety of content ranging from vlogs and interviews to technology and gaming.</p>
 </section>
 	
 	
          <iframe scrolling="no" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;title=91BTV%20Events%20and%20Video%20Calendar&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=1&amp;showTz=1&amp;src=OTFiYXRocm9vbXR2QDkxYmF0aHJvb210di5jb20&amp;color=%233366CC&amp;wmode=opaque" width="100%" data-embed="true" frameborder="0" height="650"></iframe>  
 
 <aside>
+	<h3>Youtube Channel</h3>
 		<div id="root">
  
   <div>
@@ -102,6 +117,7 @@
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.3.1.js"></script>
-<script src="js/scripts.js"></script>
+<script src="https://apis.google.com/js/api.js"></script>
+<script src="js/77.js"></script>
 </body>
 </html>
