--- a/pages/about.html
+++ b/pages/about.html
@@ -4,28 +4,44 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>91BTV</title>
+<title>About Us | 91BTV</title>
 	 <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 	<link href="../css/Style.css" rel="stylesheet" type="text/css">
-	
+	<script src="https://kit.fontawesome.com/8f8f4ba6dc.js" crossorigin="anonymous"></script>
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="images/site.webmanifest">
 </head>
  <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
 	
-	 <a class="navbar-brand" href="https://91btv.com"> <img src="../images/91BTV - 2019 website.svg" alt="Dispute Bills">
+	 <a class="navbar-brand" href="https://91btv.com"> <img src="../images/91BTV - 2019 website.svg" alt="91BTV">
         </a>
+	<div class="d-flex flex-row order-2 order-sm-3"> 
+		<ul class="navbar-nav flex-row">
+			<li class="nav-item"> <a class="nav-link px-2" href="https://fb.me/91btv"><i class="fab fa-facebook"></i></a></li>
+	      <li class="nav-item"> <a class="nav-link px-2" href="https://twitter.com/91bathroomtv"><i class="fab fa-twitter"></i></a></li>
+			<li class="nav-item"> <a class="nav-link px-2" href="https://flickr.com/91bathroomtv2"><i class="fab fa-flickr"></i></a></li>
+			<li class="nav-item"> <a class="nav-link px-2" href="https://soundcloud.com/91btv"><i class="fab fa-soundcloud"></i></a></li>
+			<li class="nav-item"> <a class="nav-link px-2" href="https://youtube.com/91btv"><i class="fab fa-youtube"></i></a></li>
+		
+		
+		</ul>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>   
-	
+	</div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent1">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item"> <a class="nav-link" href="../index.html">Home </a> </li>
 	      <li class="nav-item active"> <a class="nav-link" href="about.html">About Us <span class="sr-only">(current)</span></a> </li>
+			<li class="nav-item"> <a class="nav-link" href="contact.html">Contact Us </a> </li>
 	      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Media </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Shows</a> <a class="dropdown-item" href="#">Movies</a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="shows.html">Shows</a> <a class="dropdown-item" href="movies.html">Movies</a><a class="dropdown-item" href="music.html">Music</a>
 				
 	          <div class="dropdown-divider"></div>
 	          <a class="dropdown-item" href="http://youtube.com/91BTV">Youtube Channel</a> </div>
           </li>
+			
         </ul>
       </div>
 </nav>
@@ -100,7 +116,7 @@
 <h2> Overview</h2>
 	<p> 91BTV produces a wide variety of content ranging from vlogs and interviews to technology and gaming. </p>
 	<h2> What We Do Best</h2>
-	<p> Entertain people with interative, immersive and entertaining shows and short films.</p>
+	<p> Entertain people with interative, immersive and entertaining shows and short form videos.</p>
 	<h2> Why The Name</h2>
   <p>The name 91BTV is based on three parts; 91, B, and TV.  TV is what the original conception was founded for. 91 or the 91 freeway that runs through Los Angeles County is the area in which we imagined we would brodcast our media. B is for bathroom or the shower where we came up with the idea.</p>
 	<h2>Motto</h2>
