--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="pages/shows.html">Shows</a> <a class="dropdown-item" href="pages/movies.html">Movies</a><a class="dropdown-item" href="music.html">Music</a>
 				
 	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="http://youtube.com/91BTV">Youtube Channel</a> </div>
+	          <a class="dropdown-item" href="https://youtube.com/91BTV">Youtube Channel</a> </div>
           </li>
         </ul>
       </div>
@@ -102,11 +102,11 @@
  
   <div>
     <div class="center_arrow">
-      <img src="http://aux.iconspalace.com/uploads/drop-down-vector-icon-256.png" width="25px" style="transform: scaleY(-1);" onClick="goUp();"/>
+      <img src="images/drop-down-vector-icon-256.png" width="25px" style="transform: scaleY(-1);" onClick="goUp();"/>
     </div>
     <div class="playlist"></div>
     <div class="center_arrow">
-      <img src="http://aux.iconspalace.com/uploads/drop-down-vector-icon-256.png" width="25px" onClick="goDown();"/>
+      <img src="images/drop-down-vector-icon-256.png" width="25px" onClick="goDown();"/>
       </div>
   </div>
 </div>
