--- a/pages/movies.html
+++ b/pages/movies.html
@@ -33,12 +33,14 @@
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item"> <a class="nav-link" href="../index.html">Home </a> </li>
 	      <li class="nav-item"> <a class="nav-link" href="about.html">About Us </a> </li>
-			<li class="nav-item"> <a class="nav-link" href="contact.html">Contact Us </a> </li>
+			<li class="nav-item"> <a class="nav-link" href="mailto:91btv@91btv.com">Contact Us </a> </li>
 	      <li class="nav-item dropdown active"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Media <span class="sr-only">(current)</span></a>
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item " href="shows.html">Shows</a> <a class="dropdown-item" href="#">Movies</a><a class="dropdown-item" href="music.html">Music</a>
+			  <a class="dropdown-item" href="podcasts.html">Podcasts</a>
 				
 	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="http://youtube.com/91BTV">Youtube Channel</a> </div>
+	          <a class="dropdown-item" href="http://youtube.com/91BTV">YouTube Channel</a>
+			  <a class="dropdown-item" href="http://anchor.fm/itscoronatime">It's Corona Time Podcast</a></div>
           </li>
         </ul>
       </div>
