--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
 	      <li class="nav-item"> <a class="nav-link" href="pages/about.html">About Us</a> </li>
-			<li class="nav-item"> <a class="nav-link" href="pages/contact.html">Contact Us </a> </li>
+			<li class="nav-item"> <a class="nav-link" href="mailto:91btv@91btv.com">Contact Us </a> </li>
 	      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Media </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="pages/shows.html">Shows</a> <a class="dropdown-item" href="pages/movies.html">Movies</a><a class="dropdown-item" href="music.html">Music</a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="pages/shows.html">Shows</a> <a class="dropdown-item" href="pages/movies.html">Movies</a><a class="dropdown-item" href="music.html">Music</a><a class="dropdown-item" href="podcasts.html">Podcasts</a>
 				
 	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="https://youtube.com/91BTV">Youtube Channel</a> </div>
+	          <a class="dropdown-item" href="http://youtube.com/91BTV">YouTube Channel</a>
+			  <a class="dropdown-item" href="http://anchor.fm/itscoronatime">It's Corona Time Podcast</a> </div>
           </li>
         </ul>
       </div>
@@ -63,12 +64,12 @@
 	       						</div>
 	       						<div class="carousel-item">
 	       							<div class="embed-responsive embed-responsive-16by9">
-       								  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/o7Zaq9CnFBc" allowfullscreen></iframe>
+       								  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sBORkHU3_ZI" allowfullscreen></iframe>
 	       							</div>
 	       						</div>
 	       						<div class="carousel-item">
 	       							<div class="embed-responsive embed-responsive-16by9">
-       								  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a0688hbxbbs" allowfullscreen></iframe>
+       								  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/fomSjiRsUlo" allowfullscreen></iframe>
 	       							</div>
 	       						</div>
 	       					</div>
