--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	      <li class="nav-item"> <a class="nav-link" href="pages/about.html">About Us</a> </li>
 			<li class="nav-item"> <a class="nav-link" href="mailto:91btv@91btv.com">Contact Us </a> </li>
 	      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Media </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="pages/shows.html">Shows</a> <a class="dropdown-item" href="pages/movies.html">Movies</a><a class="dropdown-item" href="music.html">Music</a><a class="dropdown-item" href="podcasts.html">Podcasts</a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="pages/shows.html">Shows</a> <a class="dropdown-item" href="pages/movies.html">Movies</a><a class="dropdown-item" href="pages/music.html">Music</a><a class="dropdown-item" href="pages/podcasts.html">Podcasts</a>
 				
 	          <div class="dropdown-divider"></div>
 	          <a class="dropdown-item" href="http://youtube.com/91BTV">YouTube Channel</a>
